# automationProduct-Register

./: README.md  auxiliar.py  main.py  powerup.py  pyproject.toml
