[tool.poetry]
name = "python-powerup"
version = "0.1.0"
description = ""
authors = ["BalbinaRaquel <balbina.rakell@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
